[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/health.png" type="Texture" id=1]
[ext_resource path="res://items/Health.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Health" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Symbol" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FadeOut" type="Tween" parent="."]

[node name="TTL" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Health_body_entered"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
[connection signal="timeout" from="TTL" to="." method="_on_TTL_timeout"]
